Added changes like threadContext with needed info to log in parallel execution , improved the tearDown method as well